fixed classes in css

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
     <div id="controls-container" class="controls">
       <div id="prev-btn" class="control prev control-prev"><i class="fa-solid fa-arrow-left"></i></div>
-      <div id="pause-btn" class="control pause control-pausa">Pause</div>
+      <div id="pause-btn" class="control pause control-pause">Pause</div>
       <div id="next-btn" class="control next control-next"><i class="fa-solid fa-arrow-right"></i></div>
     </div>
 
